# ECSE4750

./: ECSE-4750-Fall15-Eval.docx  ECSE-4750-Fall15-Grades.xlsx  ECSE_Class Lists.xlsx  Midterm.xlsx  README.md  Syllabus.docx  TermProjectList.xlsx  gc_1509_ECSE_4750_01_history_log_2015-10-22-14-05-53.csv  ~$llabus.docx
ClassPrevious/CGLib/: cgactor.cpp  cgactor.h  cgcoords.h  cgtransform.h  cgxoglwindow.cpp  cgxoglwindow.h  cgxwindow.cpp  main.cpp
ClassPrevious/CGLib/Class20/: cgpointshape.cpp  cgpointshape.h  cgproperty.h  cgtransform.cpp  cgxwindow.h
ClassPrevious/CourseNotes/: BresenhamAlgorithm.html  Class1.html  Class17GraphicsMethods.html  Class18-Transforms.html  Class19-CGLib.html  Class1a.html  Class2.html  Class20-CGLibAdv.html  Class21-Transform.html  Class22-ViewPtTransform.html  Class23-OpenGL.html  Class24-OpenGLAnimation.html  Class25-OpenGLViewing.html  Class2a.html  GraphicsLibrary.html  TermProject.html
ClassPrevious/CourseNotes/BresenhamAlgorithm_files/: graph.jsp
ClassPrevious/CourseNotes/Class17GraphicsMethods_files/: graph.jsp
ClassPrevious/CourseNotes/Class18-Transforms_files/: graph.jsp
ClassPrevious/CourseNotes/Class19-CGLib_files/: graph.jsp
ClassPrevious/CourseNotes/Class1a_files/: graph.jsp
ClassPrevious/CourseNotes/Class20-CGLibAdv_files/: graph.jsp
ClassPrevious/CourseNotes/Class21-Transform_files/: graph.jsp
ClassPrevious/CourseNotes/Class22-ViewPtTransform_files/: graph.jsp
ClassPrevious/CourseNotes/Class23-OpenGL_files/: graph.jsp
ClassPrevious/CourseNotes/Class24-OpenGLAnimation_files/: graph.jsp
ClassPrevious/CourseNotes/Class25-OpenGLViewing_files/: graph.jsp
ClassPrevious/CourseNotes/Class2_files/: graph.jsp
ClassPrevious/CourseNotes/Class2a_files/: graph.jsp
ClassPrevious/CourseNotes/TermProject_files/: graph.jsp
ClassPrevious/CourseNotes/index_files/: graph.jsp
ClassPrevious/Fall95/: Class.cal  Class.cal~  Makefile.Mesa.aix  output.lsp
ClassPrevious/Fall95/C++/: Marching.C
ClassPrevious/Fall95/Exam1/: Exam1.frame  Exam1.ps  Exam1Ans.frame  Exam1Ans.ps  interp.C  interp.C~
ClassPrevious/Fall95/HW1/: .xmhcache
ClassPrevious/Fall95/HW2/: .xmhcache  1
ClassPrevious/Fall95/HW3/: .xmhcache
ClassPrevious/class/: COURSE  PROPOSAL  FORM.doc  CatalogInfo.rtf  Example2.param  oglrclasses.ppt
ClassPrevious/class/jogl-0.7/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.Win32  acconfig.h  acinclude.m4  aclocal.m4  config.hin  configure  configure.in  jogl.jar.orig
ClassPrevious/class/jogl-0.7/config/: ltconfig  ltmain.sh  mkinstalldirs
ClassPrevious/class/jogl-0.7/config/Win32/: Win32Notes.txt  jjogl.dsp  jjogl.dsw  jogl.mak  jogl.mdp
ClassPrevious/class/jogl-0.7/demos/: Trackball.java  bounce.java  dino.java  mech.java  planes.java  spots.java
ClassPrevious/class/jogl-0.7/docs/api/: AllNames.html  Package-jogl.glu.html  Package-jogl.html  Package-test.html  jogl.GL.html  jogl.GLU.html  jogl.JoglCanvas.html  jogl.JoglCanvasOpenFailedException.html  jogl.JoglNativeException.html  jogl.JoglRenderer.html  jogl.JoglpDataAccess.html  jogl.glu.Nurbs.html  jogl.glu.Quadric.html  jogl.glu.Tesselator.html  packages.html  tree.html
ClassPrevious/class/jogl-0.7/jogl/: GL.java  GLU.java  JoglCanvas.java  JoglNativeException.java  JoglRenderer.java  JoglpDataAccess.java
ClassPrevious/class/jogl-0.7/jogl/glu/: Nurbs.java  Quadric.java  Tesselator.java
ClassPrevious/class/jogl-0.7/lib/: Makefile.am  Makefile.in  array_ptr.c  array_ptr.h  gl.c  glu.c  glu_fixer.h  glu_nurbs.c  glu_quadric.c  glu_tesselator.c  jni_helper.h  jogl.001  jogl.dsp  jogl.dsw  jogl.ncb  jogl.opt  jogl.plg  joglWin32.c  joglWin32.h  joglX11.c  jogl_JoglCanvas.h  jogl_glu_Nurbs.h  jogl_glu_Quadric.h  jogl_glu_Tesselator.h  jogl_lib.h  methodinfo.c  methodinfo.h
ClassPrevious/class/jogl-0.7/lib/Release/: jogl.bsc  jogl.exp  jogl.lib  jogl.pch  vc50.idb  vc60.idb
ClassPrevious/class/jogl-0.7/sun/awt/motif/: X11pDataAccess.java
ClassPrevious/class/jogl-0.7/sun/awt/windows/: WindowspDataAccess.java
ClassPrevious/class/jogl-0.7/test/: Cylinder.java  Jogl.java  Texture.java  jogltest.java
ClassPrevious/oglren/: Actor.h  Camera.h  DataType.h  Hw3.cxx  MFAL.H  MFALRead.cxx  Makedepend  Makefile  OGLCam.h  OGLRen.001  OGLRen.dsp  OGLRen.ncb  OGLRen.opt  OGLRen.plg  OGLWin32Ren.cxx  OGLXRen.h  PlyGCell.cxx  PlyGCell.h  PlyLCell.cxx  PtCell.cxx  StructG.cxx  TriCell.cxx  TriCell.h  hw2.cxx  objtest.cxx
Classes/: ~$ECSE-4750-1.pptx
Classes/Class1/: ECSE-4750-1.pptx
Classes/Class2/: Angel_UNM_14_1_4.pptx  Angel_UNM_14_1_5.pptx  Angel_UNM_14_2_1.pptx  Angel_UNM_14_2_2.pptx  Bresenham Algorithm.docx  ECSE-4750-2.pptx
Classes/Class3/: Angel_UNM_14_2_3.pptx  Angel_UNM_14_2_4.pptx  Angel_UNM_14_2_5.pptx  Angel_UNM_14_3_1.pptx  ECSE-4750-3.pptx
Classes/Class4/: CoordTransforms.docx  ECSE-4750-4.pptx
Classes/Class5/: ECSE-4750-5.pptx
Classes/Class6/: ECSE-4750-6.pptx
Classes/Class7/: ECSE-4750-7.pptx  InClassChallengeGrades.rtf  Thanksgiving.rtf
Classes/Class8/: ECSE-4750-8.pptx
Classes/Class9/: Angel_UNM_14_15_3.ppt
Classes/MidTerm/: Output.ps  exam1-95.txt  exam97ans.txt  midterm.docx  midterm.htm  midterm98.htm  midterm_ans.docx  midterm_ans98.htm  sceneGraph.ppt
Classes/TermProj/: CG-TermProjTemplate.docx  Term Project Order.docx  TermOrderGenerator.html
JavaScript/: OOP in JS, Part 1 _ Public_Private Variables and Methods.html  OOP in JS, Part 2 _ Inheritance.html
OGLRen/: Cell.java  Hw2.java  Material.java  PointType.java  Renderer.java  TexCoordSet.java  Texture.java  examp.java
WebGL/CGLib/: cgCoords.js  cgLineShape.js  cgPointShape.js  cgRenderer.js  cgTransform.js  testHarness.html
WebGL/Lessons/: Learning WebGL — lesson 3.html  Learning WebGL — lesson 4.html
WebGL/OGLRen/: Actor.js  Camera.js  Cell.js  Light.js  LineCell.js  Material.js  OGLCamera.js  OGLRenderer.js  PointCell.js  PointSet.js  PolygonCell.js  PolylineCell.js  TriangleCell.js  testHarness.html  testHarness.js
(+2040 files in other folders)
